# TypesAndProgrammingLanguages

./: README.md  config.json  lambda.cabal  stack.yaml  test.l  typesandprogramminglanguages.cabal
app/: Main.hs
src/: Lambda.hs  Lib.hs  simple.hs  untyped.hs
src/simple/: data.hs  eval.hs  parse.hs
src/untyped/: data.hs  eval.hs  parse.hs
test/: bool.l  num.l  recur.l
