name:                typesandprogramminglanguages
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tomtitchener/TypesAndProgrammingLanguages#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          tomtitchener@verizon.net
copyright:           2016 Tom Titchener
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Untyped
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , wl-pprint 
  default-language:    Haskell2010
  
executable typesandprogramminglanguages-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typesandprogramminglanguages
  default-language:    Haskell2010

test-suite typesandprogramminglanguages-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typesandprogramminglanguages
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomtitchener/TypesAndProgrammingLanguages.git
